--- a/front/src/lib/styles/components/loading.css
+++ b/front/src/lib/styles/components/loading.css
@@ -1,4 +1,4 @@
-.dg-ripple {
+/* .dg-ripple {
   display: flex;
   position: relative;
   justify-content: center;
@@ -45,4 +45,4 @@
     width: 72px;
     height: 72px;
   }
-}
+} */
