--- a/front/src/lib/styles/components/popover.css
+++ b/front/src/lib/styles/components/popover.css
@@ -1,14 +1,11 @@
 .popover {
   display: flex;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 10;
+  inset: 0;
   box-shadow: var(--shadow-elevation-high);
   background-color: rgba(var(--black), 0.5);
   padding: 2rem;
