--- a/front/src/lib/styles/components/cv-timeline.css
+++ b/front/src/lib/styles/components/cv-timeline.css
@@ -25,15 +25,12 @@ label.date-toggle {
   time {
     display: flex;
     position: absolute;
-    top: 0.0875rem;
-    right: 0;
-    bottom: 0;
-    left: 0;
     justify-content: center;
     align-items: center;
     opacity: 0.5;
     z-index: 1;
     transition-duration: var(--transition-duration);
+    inset: 0.0875rem 0 0;
     padding-top: 0.33rem;
     color: var(--fg-clr);
     font-size: 1.25rem;
