--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -213,15 +213,12 @@
 
   .page-fence {
     position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     opacity: 0;
     z-index: -1;
     transition:
       max-height 0s 0.4s,
       opacity 0.33s ease-in-out 0s;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
     max-height: 0;
   }
