--- a/front/src/lib/styles/components/post-hero.css
+++ b/front/src/lib/styles/components/post-hero.css
@@ -48,11 +48,8 @@
     border-radius: 0.75rem;
     &::before {
       position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
       backdrop-filter: blur(0.5rem);
+      inset: 0;
       content: ' ';
     }
     &.loaded {
