--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -73,14 +73,12 @@ body {
 
 .flourish {
   position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
   transform: translateZ(0);
   z-index: 1;
   transition-duration: var(--transition-duration);
   transition-property: background-color;
   transition-timing-function: var(--transition-timing-function);
+  inset: 0 0 auto;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: var(--fg-clr);
   height: 0.5rem;
