fix(front): add loading state to posts grid (#1187)
Closes: #1187

--- a/front/static/styles/noscript.css
+++ b/front/static/styles/noscript.css
@@ -31,3 +31,6 @@ body .footer {
 .post .hero-wrap noscript .hero.noscript {
   display: block;
 }
+.posts-grid .posts-grid-item {
+  opacity: 1 !important;
+}
