--- a/front/src/lib/components/cv/SkillBreakdown/SkillBreakdown.css
+++ b/front/src/lib/components/cv/SkillBreakdown/SkillBreakdown.css
@@ -19,22 +19,71 @@
 .skill-graph {
   display: flex;
   position: relative;
-  margin-top: 11rem;
+  margin: 1.5rem auto 0 auto;
   box-shadow: var(--shadow-elevation-low);
+  border-radius: 0.25rem;
+  background-color: var(--clr-neut-700);
+  width: 80%;
   &__item {
     position: relative;
+    transform: scale(1);
     filter: brightness(1);
-    animation: graphOut 0s;
-    animation-delay: 1s;
-    animation-fill-mode: forwards;
-    transition-duration: var(--transition-duration-fast);
-    transition-property: width;
-    transition-timing-function: var(--transition-timing-function);
-    cursor: pointer;
     box-sizing: border-box;
-    padding: 1rem 0;
     width: calc(var(--width) * 100%);
-    /* overflow: hidden; */
+    height: 0.33rem;
+    @media screen and (min-width: 640px) {
+      animation: graphOut 0s;
+      animation-delay: 1s;
+      animation-fill-mode: forwards;
+      transition-duration: var(--transition-duration-fast);
+      transition-property: width, transform;
+      transition-timing-function: var(--transition-timing-function);
+      cursor: pointer;
+      padding: 1rem 0;
+      &:not(:hover),
+      &:not(:focus),
+      &:not(:focus-visible),
+      &:not(:active) {
+        &::before {
+          transition-delay: 50ms;
+          transition-duration: 500ms;
+        }
+      }
+      &:hover,
+      &:focus,
+      &:focus-visible,
+      &:active {
+        transform: scale(1.3);
+        opacity: 1;
+        z-index: 1;
+        animation: graphIn 0s;
+        animation-delay: 0s;
+        transition-delay: (333ms);
+        box-shadow: var(--shadow-elevation-low);
+        width: calc(var(--width) * 2 * 100%);
+        /* overflow: visible; */
+        /* filter: brightness(1.1); */
+        /* transform: scale(1.01); */
+        &::before {
+          opacity: 0.5;
+          filter: contrast(10%) brightness(100%);
+          transition-delay: 0s;
+          transition-duration: var(--transition-duration-fast);
+        }
+        &:first-of-type {
+          border-left: none;
+        }
+        &:last-of-type {
+          border-right: none;
+        }
+      }
+      &:hover &__details {
+        opacity: 1;
+        &__icon {
+          max-height: 3rem;
+        }
+      }
+    }
     &::before {
       display: block;
       position: absolute;
@@ -46,8 +95,8 @@
       filter: contrast(10%) brightness(100%) blur(0);
       transition-delay: 1s;
       transition-duration: var(--transition-duration-fast);
-      transition-property: background, filter, opacity;
-      will-change: opacity, border-color, background-color, filter;
+      transition-property: background-color, filter, opacity, transform;
+      will-change: opacity, background-color, filter, transform;
       box-shadow: none;
       background-image: inherit;
       background-clip: border-box;
@@ -90,51 +139,11 @@
       }
       &__icon {
         align-self: center;
+        filter: drop-shadow(-2px 1px 0.175rem rgba(0, 0, 0, 0.1));
         transition-duration: var(--transition-duration);
         transition-property: max-height;
         transition-timing-function: var(--transition-timing-function);
         max-height: 1rem;
-      }
-    }
-    &:not(:hover),
-    &:not(:focus),
-    &:not(:focus-visible),
-    &:not(:active) {
-      &::before {
-        transition-delay: 50ms;
-        transition-duration: 500ms;
-      }
-    }
-    &:hover,
-    &:focus,
-    &:focus-visible,
-    &:active {
-      opacity: 1;
-      z-index: 1;
-      animation: graphIn 0s;
-      animation-delay: 0s;
-      box-shadow: var(--shadow-elevation-low);
-      width: calc(var(--width) * 2 * 100%);
-      /* overflow: visible; */
-      /* filter: brightness(1.1); */
-      /* transform: scale(1.01); */
-      &::before {
-        opacity: 0.5;
-        filter: contrast(10%) brightness(100%);
-        transition-delay: 0s;
-        transition-duration: var(--transition-duration-fast);
-      }
-      &:first-of-type {
-        border-left: none;
-      }
-      &:last-of-type {
-        border-right: none;
-      }
-    }
-    &:hover &__details {
-      opacity: 1;
-      &__icon {
-        max-height: 3rem;
       }
     }
     &:first-of-type {
