style(front): remove content container background
this was inconsistent. trying out zero background across all pages — this may have a performance benefit as well.

--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -178,7 +178,7 @@ a.scroll-top {
   }
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .privacy,
   .post {
     box-shadow: var(--shadow-elevation-high);
@@ -190,4 +190,4 @@ a.scroll-top {
   .post::before {
     background: var(--rim-light-mask-bg);
   }
-}
+} */
