--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -7,7 +7,6 @@
     letter-spacing: -0.175rem;
   }
   h1.page-heading,
-  h1.collection-title,
   h1.skill-title {
     margin-top: 0;
     padding: 0;
@@ -660,5 +659,13 @@ label.date-toggle {
     svg .calback {
       fill: var(--hardlight-clr);
     }
+  }
+}
+
+.skill-graph__item__details__term {
+  &__svg {
+    border: 10px solid red;
+    padding: 2.5rem 0 0.25rem 0;
+    height: 222rem;
   }
 }
