--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -31,7 +31,7 @@
     font-size: 1.875rem;
     line-height: 2.25rem;
     font-family: var(--font-psb);
-    letter-spacing: -0.025em;
+    letter-spacing: -0.0875rem;
   }
   p {
     transition-duration: var(--transition-duration);
