--- a/front/src/lib/styles/base/typography.css
+++ b/front/src/lib/styles/base/typography.css
@@ -182,7 +182,7 @@ h1.page-heading {
   .meat {
     ol,
     ul {
-      margin: 0.75rem 0 0.75rem 1.5rem;
+      margin: 0.75rem 0 0.75rem 0;
       ol,
       ul {
         margin: 0.75rem 0 0.75rem 0.75rem;
