--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -1,7 +1,8 @@
 @import '../components/cv-timeline.css';
 
 .cv.meat {
-  width: 100%;
+  padding: 2.33rem;
+  max-width: 64rem;
   h1.page-heading {
     font-family: var(--font-psbl);
     letter-spacing: -0.0875rem;
@@ -330,7 +331,8 @@
       }
     }
     a {
-      padding-bottom: 0.5rem;
+      border: none;
+      padding-bottom: 0;
     }
   }
   .experience-timeline-date,
