wip(front): refactor two column post/article layout with route group (#1216)

--- a/front/src/routes/(layouts)/article.css
+++ b/front/src/routes/(layouts)/article.css
@@ -1,8 +1,5 @@
-.cv.experience {
+.article {
   position: relative;
-}
-
-.experience {
   &__header {
     margin-bottom: 3rem;
     text-align: center;
