--- a/front/src/lib/styles/components/post-hero.css
+++ b/front/src/lib/styles/components/post-hero.css
@@ -1,7 +1,7 @@
 .post-hero-wrap {
   display: block;
   position: relative;
-  top: -1rem;
+  /* top: -1rem; */
   z-index: 1;
   margin-right: 1rem;
   margin-left: 1rem;
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: 768px) {
   .post-hero-wrap {
-    top: -5rem;
+    /* top: -5rem; */
     left: 0;
   }
   .post-hero {
