--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -24,7 +24,7 @@
   .post-title {
     left: -1px;
     z-index: 5;
-    margin-top: 0;
+    margin-top: 1rem;
     margin-bottom: 0;
     padding: 0 1rem;
     line-height: 1.2;
@@ -389,15 +389,17 @@
 @media screen and (min-width: 333px) {
   .post {
     margin-top: 0;
-    .pubdate {
-      padding-left: 1.5rem;
-    }
   }
 }
 
 @media screen and (min-width: 480px) {
-  .post .post-title {
-    padding: 1rem 1.5rem 0;
+  .post {
+    .pubdate {
+      padding-left: 1.5rem;
+    }
+    .post-title {
+      padding: 1rem 1.5rem 0;
+    }
   }
   .post .post-title,
   .post .post-article {
