feat(front): add Dockerfile and YAML syntax-highlighter support

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -131,6 +131,9 @@
   }
   &.headerless,
   &.titleless {
+    .syntax-highlighter__screen-wrap {
+      padding-bottom: 0.25rem;
+    }
     > pre {
       padding-top: 1rem;
     }
