fix(front): remove left/right padding on centered post images (#1238)
Closes: #1238

--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -376,7 +376,7 @@
     &--center {
       float: none;
       margin: auto;
-      padding: 0.5rem;
+      padding: 0.5rem 0;
     }
   }
   .footnotes {
