--- a/front/src/routes/(layouts)/article.css
+++ b/front/src/routes/(layouts)/article.css
@@ -1,14 +1,45 @@
 .article {
   position: relative;
   &__header {
+    position: relative;
     margin-bottom: 3rem;
     text-align: center;
-    & h1,
-    h2 {
-      filter: brightness(1);
+    h1 {
+      position: relative;
+      padding-top: 4rem;
+      span {
+        position: absolute;
+        top: 4rem;
+        right: 0;
+        left: 0;
+        transition-duration: var(--transition-duration);
+        transition-property: font-size, inset;
+        transition-timing-function: var(--transition-timing-function);
+        width: 100%;
+        text-align: center;
+        @media (prefers-reduced-motion: reduce) {
+          animation-duration: 0.001s !important;
+          animation-iteration-count: 1 !important;
+          transition-delay: 0.001s !important;
+          transition-duration: 0.001s !important;
+          scroll-behavior: auto !important;
+        }
+      }
+    }
+    .collection__title {
+      position: absolute;
       transition-duration: var(--transition-duration);
-      transition-property: filter, opacity;
+      transition-property: opacity;
       transition-timing-function: var(--transition-timing-function);
+      inset: 0;
+      padding: 0;
+      @media (prefers-reduced-motion: reduce) {
+        animation-duration: 0.001s !important;
+        animation-iteration-count: 1 !important;
+        transition-delay: 0.001s !important;
+        transition-duration: 0.001s !important;
+        scroll-behavior: auto !important;
+      }
     }
     @media screen and (min-width: 640px) {
       &:has(
@@ -17,29 +48,25 @@
           .skill-graph:focus-visible,
           .skill-graph:focus
         ) {
-        & h1,
-        h2 {
-          opacity: 0.3;
-          filter: brightness(0.2) blur(0.5rem);
+        & h1 span {
           transition-duration: var(--transition-duration-fast);
+          inset: 0;
+          font-size: 1.5rem;
+          @media (prefers-reduced-motion: reduce) {
+            animation-duration: 0.001s !important;
+            animation-iteration-count: 1 !important;
+            transition-delay: 0.001s !important;
+            transition-duration: 0.001s !important;
+            scroll-behavior: auto !important;
+          }
+        }
+        & .collection__title {
+          opacity: 0;
         }
       }
     }
   }
   &__title {
     padding: 0.25rem 0 2rem 0;
-  }
-}
-@media (prefers-reduced-motion: reduce) and (width >= 1px) {
-  *,
-  ::before,
-  ::after,
-  ::view-transition-old(*),
-  ::view-transition-new(*) {
-    animation-duration: 0.001s !important;
-    animation-iteration-count: 1 !important;
-    transition-delay: 0.001s !important;
-    transition-duration: 0.001s !important;
-    scroll-behavior: auto !important;
   }
 }
